[project]
name = "ai-interview-simulator"
version = "0.1.0"
description = "AI Interview simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "google-genai>=1.64.0",
    "langchain>=1.2.10",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
